--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
 	<section id = "Servicos" class = "grid-one section-branca section">
-        <div class="main-content grid-one-content">
+        <div class="main-content grid-one-content intro-content">
             <h2 class="grid-main-heading ful">Nossos Serviços</h2>
             <div class="grid gallery-img">
                 <div>
@@ -80,7 +80,7 @@
 
     <section id = 'Acoes' class=" section-sob section overlay" >
                 <div class = 'main-content control-content'>
-                    <div class='control-img'>
+                    <div id='imagi' class='control-img'>
                         <img src="media/banner.png" alt="">
                     </div>
                     <div class="control-text-content">
@@ -101,22 +101,22 @@
         <div class="main-content">
             <h2>VÍDEOS</h2>
             
-            <iframe width="560" height="315" src="media/uno.mp4" 
+            <iframe class="iframe" src="media/uno.mp4" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
 
-            <iframe width="560" height="315" src="media/dos.mp4" 
+            <iframe class="iframe" src="media/dos.mp4" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
 
-			<iframe width="560" height="315" src="media/tres.mp4" 
+			<iframe class="iframe" src="media/tres.mp4" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
 
-            <iframe width="560" height="315" src="media/quatro.mp4" 
+            <iframe class="iframe" src="media/quatro.mp4" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
@@ -131,17 +131,23 @@
             <div class='control-img'>
                 <h2>Josué</h2>
                 <img src="media/img2.png" alt="">
+                <div class="space-p">
+                    <p>Cachorro encontrado na rua, foi resgatada e hoje em dia adora brincar comer
+                        dormir e ficar no jardim, um cachorro muito amavel
+                    </p>
+                </div>
             </div>
             <div class='control-img'>
                 <h2>Pietro</h2>
                 <img src="media/img3.png" alt="">
+                <div class="space-p">
+                    <p>Cachorro encontrado na rua, foi resgatada e hoje em dia adora brincar comer
+                        dormir e ficar no jardim, um cachorro muito amavel
+                    </p>
+                </div>
             </div>
-            <p>Cachorro encontrado na rua, foi resgatada e hoje em dia adora brincar comer
-                dormir e ficar no jardim, um cachorro muito amavel
-            </p>
-            <p>Cachorro encontrado na rua, foi resgatada e hoje em dia adora brincar comer
-                dormir e ficar no jardim, um cachorro muito amavel
-            </p>
+
+
         </div>
     </section>
 
